# C-Programming

./: CMakeLists.txt
Ass-1/Factorial/: Factorial.depend  main.c
Ass-1/Fibo_func/: Fibo_func.cbp  Fibo_func.depend  main.c
Ass-1/Matrix_Determinant/: Matrix_Determinant.cbp  Matrix_Determinant.depend  Matrix_Determinant.layout  main.c
Ass-1/Matrix_add/: Matrix_add.cbp  Matrix_add.depend  Matrix_add.layout  main.c
Ass-1/Matrix_mult/: Matrix_mult.cbp  Matrix_mult.depend  main.c
Ass-1/Maximum_number/: Maximum_number.cbp  Maximum_number.depend  main.c
Ass-1/Sparse_matrix/: Sparse_matrix.cbp  Sparse_matrix.depend  Sparse_matrix.layout  main.c
Ass-1/Swap_without/: Swap_without.cbp  main.c
Ass-1/Tranpose_of_matrix/: Tranpose_of_matrix.cbp  Tranpose_of_matrix.depend  main.c
Ass-2/Lagrange's_interpolation/: Lagrange's_interpolation.cbp  Lagrange's_interpolation.depend  main.c
Ass-2/Newtons_Backward/: main.c  (+2 more)
Binary/: main.c  sss.depend
Bubble/: abc.depend  abc.layout  main.c
Fibo/: Fibo.cbp  Fibo.depend  Fibo.layout  main.c
Gauss_Seidel/: Gauss_seidel.cbp  Gauss_seidel.depend  Gauss_seidel.layout  main.c
MergeSort/: MergeSort.depend  MergeSort.layout  main.c
My_first_program/: My_first_program.cbp  main.c
basic/: basic.depend  main.c
fac/: fac.cbp  main.c
knapsack/: knapsack.depend  knapsack.layout
macro_defining/: macro_defining.cbp  macro_defining.depend  main.c
matrix_sorting/: main.c  matrix_sorting.cbp  matrix_sorting.depend
merge2/: merge2.cbp  merge2.depend  merge2.layout
times/: main.cpp  times.cbp
tree/: main.c  tree.layout
(+25 files in other folders)
